--- a/frontend/components/data/tasks.json
+++ b/frontend/components/data/tasks.json
@@ -1,17 +1,19 @@
 [
     {
-      "id": "TASK-8782",
-      "title": "You can't compress the program without quantifying the open-source SSD pixel!",
-      "status": "in progress",
-      "label": "documentation",
-      "priority": "medium"
+      "id": "kgr20cs001",
+      "title": "Aakash",
+      "status":"Male",
+      "label": "Male",
+      "priority": "12345",
+      "backlog":"10",
+      "semester":"10"
     },
     {
-      "id": "TASK-7878",
-      "title": "Try to calculate the EXE feed, maybe it will index the multi-byte pixel!",
-      "status": "backlog",
-      "label": "documentation",
-      "priority": "medium"
+      "id": "knp20cs002",
+      "title": "Aishwarya",
+      "status": "Female",
+      "label": "",
+      "priority": "67890"
     },
     {
       "id": "TASK-7839",
